typefaces section, root vars for colors

--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,44 @@
 		<meta name="msapplication-config" content="/icons/browserconfig.xml" />
 		<meta name="theme-color" content="#ffffff" />
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<div class="container">
+				<section class="typeface">
+					<h2 class="section-heading">
+						<span class="section-heading__number">01.</span>
+						Typeface
+					</h2>
+
+					<div class="typeface__wrapper section-wrapper">
+						<div class="typeface__literal">
+							<div class="typeface__paper paper">Aa</div>
+						</div>
+						<div class="typeface__examples">
+							<h3 class="typeface__title">Open Source</h3>
+							<h4 class="typeface__font-family">IBM Plex Sans</h4>
+							<p class="typeface__regular">
+								Regular <br />
+								Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp
+								Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz
+							</p>
+							<p class="typeface__semi-bold">
+								SemiBold <br />
+								Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp
+								Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz
+							</p>
+							<div class="typeface__download">
+								Download <br />
+								<a
+									href="http://bit.ly/revkit-ibm-plex"
+									class="typeface__link"
+									>bit.ly/revkit-ibm-plex</a
+								>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+		</main>
+	</body>
 </html>
