--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-			name="description"
-			content="RevKit UI Kit. Styleguide page. For education purpose"
-		/>
-		<title>RevKit - Styleguide</title>
-		<link rel="stylesheet" href="/styles.css" />
-		<script src="/script.js" defer></script>
-		<link
-			rel="apple-touch-icon"
-			sizes="76x76"
-			href="/icons/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="/icons/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="/icons/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="/icons/site.webmanifest" />
-		<link rel="shortcut icon" href="/icons/favicon.ico" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-config" content="/icons/browserconfig.xml" />
-		<meta name="theme-color" content="#ffffff" />
-	</head>
-	<body>
-		<main>
-			<div class="container">
-				<section class="typeface">
-					<h2 class="section-heading">
-						<span class="section-heading__number">01.</span>
-						Typeface
-					</h2>
-
-					<div class="typeface__wrapper section-wrapper">
-						<div class="typeface__literal">
-							<div class="typeface__paper paper">Aa</div>
-						</div>
-						<div class="typeface__examples">
-							<h3 class="typeface__title">Open Source</h3>
-							<h4 class="typeface__font-family">IBM Plex Sans</h4>
-							<p class="typeface__regular">
-								Regular <br />
-								Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp
-								Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz
-							</p>
-							<p class="typeface__semi-bold">
-								SemiBold <br />
-								Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp
-								Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz
-							</p>
-							<div class="typeface__download">
-								Download <br />
-								<a
-									href="http://bit.ly/revkit-ibm-plex"
-									class="typeface__link"
-									>bit.ly/revkit-ibm-plex</a
-								>
-							</div>
-						</div>
-					</div>
-				</section>
-			</div>
-		</main>
-	</body>
-</html>
+<!DOCTYPE html><html lang="en">	<head>		<meta charset="UTF-8">		<meta http-equiv="X-UA-Compatible" content="IE=edge">		<meta name="viewport" content="width=device-width, initial-scale=1.0">		<meta name="description" content="RevKit UI Kit. Styleguide page. For education purpose">		<title>RevKit - Styleguide</title>		<link rel="stylesheet" href="/styles.css">		<script src="/script.js" defer></script>	<link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+<link rel="manifest" href="/icons/site.webmanifest">
+<link rel="shortcut icon" href="/icons/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/icons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff"></head>	<body>		<main>			<div class="container">				<section class="typeface">					<h2 class="section-heading">						<span class="section-heading__number">01.</span>						Typeface					</h2>					<div class="typeface__wrapper section-wrapper">						<div class="typeface__literal">							<div class="typeface__paper paper">Aa</div>						</div>						<div class="typeface__examples">							<h3 class="typeface__title">Open Source</h3>							<h4 class="typeface__font-family">IBM Plex Sans</h4>							<p class="typeface__regular">								Regular <br>								Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp								Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz							</p>							<p class="typeface__semi-bold">								SemiBold <br>								Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp								Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz							</p>							<div class="typeface__download">								Download <br>								<a href="http://bit.ly/revkit-ibm-plex" class="typeface__link">bit.ly/revkit-ibm-plex</a>							</div>						</div>					</div>				</section>				<section class="colors">					<h2 class="section-heading">						<span class="section-heading__number">02.</span>						Colors					</h2>					<div class="colors__wrapper section-wrapper">						<div class="colors__paper colors__paper--accent paper">							<h3 class="colors__name">Accent</h3>							<h4 class="colors__code">0880AE</h4>						</div>						<div class="colors__paper colors__paper--warning paper">							<h3 class="colors__name">Warning</h3>							<h4 class="colors__code">F2AC57</h4>						</div>						<div class="colors__paper colors__paper--success paper">							<h3 class="colors__name">Success</h3>							<h4 class="colors__code">14A38B</h4>						</div>						<div class="colors__paper colors__paper--error paper">							<h3 class="colors__name">Error</h3>							<h4 class="colors__code">FF7171</h4>						</div>						<div class="colors__paper colors__paper--primary paper">							<h3 class="colors__name">Primary</h3>							<h4 class="colors__code">2C2738</h4>						</div>						<div class="colors__paper colors__paper--secondary paper">							<h3 class="colors__name">Secondary</h3>							<h4 class="colors__code">756F86</h4>						</div>						<div class="colors__paper colors__paper--muted paper">							<h3 class="colors__name">Muted</h3>							<h4 class="colors__code">7C9CBF</h4>						</div>						<div class="colors__paper colors__paper--bright paper">							<h3 class="colors__name">Bright</h3>							<h4 class="colors__code">FFFFFF</h4>						</div>						<div class="colors__paper colors__paper--shade paper">							<h3 class="colors__name">Shade</h3>							<h4 class="colors__code">DBE2EA</h4>						</div>						<div class="colors__paper colors__paper--tint paper">							<h3 class="colors__name">Tint</h3>							<h4 class="colors__code">EBF4F8</h4>						</div>					</div>				</section>			</div>		</main>	</body></html>
