controls page, form inputs

--- a/src/index.html
+++ b/src/index.html
@@ -746,6 +746,12 @@
 			</div>
 		</main>
 
+		<a href="/controls.html" class="page-link page-link--next" title="To controls page">
+			<svg class="icons__item icon icon--tint">
+				<use href="#chevron-right" />
+			</svg>
+		</a>
+
 		<!-- Спрайты для иконок, взяты из файла /dist/icons/icon-sprite.svg, генерируемого автоматически.
 		Размещен здесь, так как при использовании отдельного файла иконки отображаются некорректно (из-за использования в иконках элемента mask) -->
 		<?xml version="1.0" encoding="utf-8"?><svg
