--- a/src/controls.html
+++ b/src/controls.html
@@ -454,6 +454,122 @@ Value</textarea
                                 </div>
                             </div>
                         </div>
+                        <!-- Pagination elements -->
+                        <div class="form__paginations">
+                            <!-- Pagination -->
+                            <div class="form__pagination-item pagination">
+                                <button
+                                    class="pagination__button"
+                                    aria-label="Previous page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#subtract-minus-remove"
+                                        ></use>
+                                    </svg>
+                                </button>
+                                <button class="pagination__button">01</button>
+                                <button
+                                    class="
+                                        pagination__button
+                                        pagination__button--outside
+                                    "
+                                    aria-label="Next page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#add-plus"
+                                        ></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <!-- Pagination. Focus on minus -->
+                            <div class="form__pagination-item pagination">
+                                <button
+                                    class="pagination__button"
+                                    aria-label="Previous page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#subtract-minus-remove"
+                                        ></use>
+                                    </svg>
+                                </button>
+                                <button class="pagination__button">01</button>
+                                <button
+                                    class="
+                                        pagination__button
+                                        pagination__button--outside
+                                    "
+                                    aria-label="Next page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#add-plus"
+                                        ></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <!-- Pagination. Focus on plus -->
+                            <div class="form__pagination-item pagination">
+                                <button
+                                    class="pagination__button"
+                                    aria-label="Previous page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#subtract-minus-remove"
+                                        ></use>
+                                    </svg>
+                                </button>
+                                <button class="pagination__button">01</button>
+                                <button
+                                    class="
+                                        pagination__button
+                                        pagination__button--outside
+                                    "
+                                    aria-label="Next page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#add-plus"
+                                        ></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <!-- Pagination. Disabled -->
+                            <div
+                                class="
+                                    form__pagination-item
+                                    pagination pagination--disabled
+                                "
+                            >
+                                <button
+                                    class="pagination__button"
+                                    aria-label="Previous page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#subtract-minus-remove"
+                                        ></use>
+                                    </svg>
+                                </button>
+                                <button class="pagination__button">01</button>
+                                <button
+                                    class="
+                                        pagination__button
+                                        pagination__button--outside
+                                    "
+                                    aria-label="Next page"
+                                >
+                                    <svg class="pagination__icon">
+                                        <use
+                                            href="/icons/icon-sprite.svg#add-plus"
+                                        ></use>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
