--- a/src/controls.html
+++ b/src/controls.html
@@ -308,7 +308,6 @@
                                     form__textarea
                                     text-field text-field--multiline
                                 "
-                                id="form-textarea-01"
                             >
                                 <label
                                     for="form-textarea-01"
@@ -344,15 +343,14 @@
                                     form__textarea
                                     text-field text-field--multiline
                                 "
-                                id="form-textarea-01"
                             >
                                 <label
-                                    for="form-textarea-01"
+                                    for="form-textarea-02"
                                     class="text-field__label"
                                     >Label</label
                                 >
                                 <textarea
-                                    id="form-textarea-01"
+                                    id="form-textarea-02"
                                     class="text-field__input"
                                     placeholder="Placeholder"
                                 >
@@ -382,15 +380,14 @@ Value</textarea
                                     form__textarea
                                     text-field text-field--multiline
                                 "
-                                id="form-textarea-01"
                             >
                                 <label
-                                    for="form-textarea-01"
+                                    for="form-textarea-03"
                                     class="text-field__label"
                                     >Label</label
                                 >
                                 <textarea
-                                    id="form-textarea-01"
+                                    id="form-textarea-03"
                                     class="text-field__input"
                                     placeholder="Placeholder"
                                 >
@@ -420,15 +417,14 @@ Value</textarea
                                     form__textarea
                                     text-field text-field--multiline
                                 "
-                                id="form-textarea-01"
                             >
                                 <label
-                                    for="form-textarea-01"
+                                    for="form-textarea-04"
                                     class="text-field__label"
                                     >Label</label
                                 >
                                 <textarea
-                                    id="form-textarea-01"
+                                    id="form-textarea-04"
                                     class="text-field__input"
                                     placeholder="Placeholder"
                                     disabled
@@ -455,7 +451,7 @@ Value</textarea
                             </div>
                         </div>
                         <!-- Pagination elements -->
-                        <div class="form__paginations">
+                        <div class="form__elements-wrapper">
                             <!-- Pagination -->
                             <div class="form__pagination-item pagination">
                                 <button
@@ -568,6 +564,96 @@ Value</textarea
                                         ></use>
                                     </svg>
                                 </button>
+                            </div>
+                        </div>
+                        <!-- Checkboxes -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__checkboxes">
+                                <!-- Checkbox -->
+                                <div class="checkbox">
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox__input"
+                                        id="form-checkbox-01"
+                                    />
+                                    <label
+                                        for="form-checkbox-01"
+                                        class="checkbox__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Checkbox checked-->
+                                <div class="checkbox">
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox__input"
+                                        id="form-checkbox-02"
+                                        checked
+                                    />
+                                    <label
+                                        for="form-checkbox-02"
+                                        class="checkbox__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Checkbox partial checked-->
+                                <div class="checkbox checkbox--partial">
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox__input"
+                                        id="form-checkbox-03"
+                                        checked
+                                    />
+                                    <label
+                                        for="form-checkbox-03"
+                                        class="checkbox__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Checkbox disabled -->
+                                <div class="checkbox">
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox__input"
+                                        id="form-checkbox-04"
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-checkbox-04"
+                                        class="checkbox__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Checkbox checked disabled-->
+                                <div class="checkbox">
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox__input"
+                                        id="form-checkbox-05"
+                                        checked
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-checkbox-05"
+                                        class="checkbox__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Checkbox partial checked disabled-->
+                                <div class="checkbox checkbox--partial">
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox__input"
+                                        id="form-checkbox-06"
+                                        checked
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-checkbox-06"
+                                        class="checkbox__label"
+                                        >Label</label
+                                    >
+                                </div>
                             </div>
                         </div>
                     </div>
