--- a/src/controls.html
+++ b/src/controls.html
@@ -656,6 +656,71 @@ Value</textarea
                                 </div>
                             </div>
                         </div>
+                        <!-- Radiobuttons -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__radios">
+                                <!-- Radiobutton -->
+                                <div class="radio">
+                                    <input
+                                        type="radio"
+                                        name="radio-01"
+                                        class="radio__input"
+                                        id="form-radio-01"
+                                    />
+                                    <label
+                                        for="form-radio-01"
+                                        class="radio__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Radiobutton checked -->
+                                <div class="radio">
+                                    <input
+                                        type="radio"
+                                        name="radio-01"
+                                        class="radio__input"
+                                        id="form-radio-02"
+                                        checked
+                                    />
+                                    <label
+                                        for="form-radio-02"
+                                        class="radio__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Radiobutton disabled -->
+                                <div class="radio">
+                                    <input
+                                        type="radio"
+                                        name="radio-02"
+                                        class="radio__input"
+                                        id="form-radio-03"
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-radio-03"
+                                        class="radio__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Radiobutton disabled checked -->
+                                <div class="radio">
+                                    <input
+                                        type="radio"
+                                        name="radio-02"
+                                        class="radio__input"
+                                        id="form-radio-04"
+                                        checked
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-radio-04"
+                                        class="radio__label"
+                                        >Label</label
+                                    >
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
