--- a/src/controls.html
+++ b/src/controls.html
@@ -721,6 +721,67 @@ Value</textarea
                                 </div>
                             </div>
                         </div>
+                        <!-- Toggle switches -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__toggles">
+                                <!-- Toggle -->
+                                <div class="toggle">
+                                    <input
+                                        type="checkbox"
+                                        class="toggle__input"
+                                        id="form-toggle-01"
+                                    />
+                                    <label
+                                        for="form-toggle-01"
+                                        class="toggle__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Toggle checked-->
+                                <div class="toggle">
+                                    <input
+                                        type="checkbox"
+                                        class="toggle__input"
+                                        id="form-toggle-02"
+                                        checked
+                                    />
+                                    <label
+                                        for="form-toggle-02"
+                                        class="toggle__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Toggle disabled -->
+                                <div class="toggle">
+                                    <input
+                                        type="checkbox"
+                                        class="toggle__input"
+                                        id="form-toggle-03"
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-toggle-03"
+                                        class="toggle__label"
+                                        >Label</label
+                                    >
+                                </div>
+                                <!-- Toggle disabled checked -->
+                                <div class="toggle">
+                                    <input
+                                        type="checkbox"
+                                        class="toggle__input"
+                                        id="form-toggle-04"
+                                        checked
+                                        disabled
+                                    />
+                                    <label
+                                        for="form-toggle-04"
+                                        class="toggle__label"
+                                        >Label</label
+                                    >
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
