--- a/src/controls.html
+++ b/src/controls.html
@@ -782,6 +782,42 @@ Value</textarea
                                 </div>
                             </div>
                         </div>
+                        <!-- Sliders -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__sliders">
+                                <!-- Slider -->
+                                <div
+                                    class="form__slider-item slider"
+                                    id="form-slider-01"
+                                >
+                                    <input
+                                        type="range"
+                                        class="slider__input"
+                                        min="0"
+                                        max="100"
+                                        step="1"
+                                        value="75"
+                                    />
+                                    <div class="slider__progress"></div>
+                                </div>
+                                <!-- Slider disabled -->
+                                <div
+                                    class="form__slider-item slider"
+                                    id="form-slider-02"
+                                >
+                                    <input
+                                        type="range"
+                                        class="slider__input"
+                                        min="0"
+                                        max="100"
+                                        step="1"
+                                        value="25"
+                                        disabled
+                                    />
+                                    <div class="slider__progress"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
