--- a/src/controls.html
+++ b/src/controls.html
@@ -818,6 +818,119 @@ Value</textarea
                                 </div>
                             </div>
                         </div>
+                        <!-- Labels -->
+                        <div class="form__elements-wrapper">
+                            <div class="form__labels">
+                                <!-- Label -->
+                                <div class="form__label-item label label--bright">
+                                    <span class="label__text">Label</span>
+                                    <button class="label__button">
+                                        <svg
+                                            class="label__icon"
+                                            viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Label dark-->
+                                <div class="form__label-item label">
+                                    <span class="label__text">Label</span>
+                                    <button class="label__button">
+                                        <svg
+                                            class="label__icon"
+                                            viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Label accent-->
+                                <div class="form__label-item label label--accent">
+                                    <span class="label__text">Label</span>
+                                    <button class="label__button">
+                                        <svg
+                                            class="label__icon"
+                                            viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Label warning-->
+                                <div class="form__label-item label label--warning">
+                                    <span class="label__text">Label</span>
+                                    <button class="label__button">
+                                        <svg
+                                            class="label__icon"
+                                            viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Label success-->
+                                <div class="form__label-item label label--success">
+                                    <span class="label__text">Label</span>
+                                    <button class="label__button">
+                                        <svg
+                                            class="label__icon"
+                                            viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <!-- Label error-->
+                                <div class="form__label-item label label--error">
+                                    <span class="label__text">Label</span>
+                                    <button class="label__button">
+                                        <svg
+                                            class="label__icon"
+                                            viewBox="0 0 24 24"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M5 5L19 19M5 19L19 5"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
